[package]
name = "luanno"
version = "0.1.0"
authors = ["Louis Birla <louis.birla@gmail.com>"]
edition = "2018"

[dependencies]
serenity = { version = "0.10", default-features = false, features = ["framework", "standard_framework", "rustls_backend", "gateway", "cache"]}
tokio = { version = "1.2", features = ["macros", "rt-multi-thread"] }
# Logging
log = "0.4"
pretty_env_logger = "0.4"
